fix: z-index for Popover

--- a/front/src/components/PerfCallTree/PerfCallTree.scss
+++ b/front/src/components/PerfCallTree/PerfCallTree.scss
@@ -17,6 +17,8 @@
 }
 
 .popover {
+  z-index: 150;
+
   :global(.Popover-tip) {
     height: 10px;
   }
